fixed fonts on mobile

--- a/app/pages/Homepage/Homepage.module.scss
+++ b/app/pages/Homepage/Homepage.module.scss
@@ -50,6 +50,9 @@
 }
 
 @media screen and (max-width: 767px) {
+  .homepage_container{
+    margin-top: 0;
+  }
   .steps_info {
     max-width: 343px;
     margin-top: 40px;
@@ -60,6 +63,7 @@
     &__heading {
       h2 {
         font-size: 32px;
+        line-height: 120%;
       }
 
       p {
