--- a/components/Step/Step.module.scss
+++ b/components/Step/Step.module.scss
@@ -80,9 +80,14 @@
         font-size: 18px;
       }
 
+      h3{
+        font-size: 16px;
+        line-height: 150%;
+      }
+
       p {
         margin: 0;
-        font-size: 14px;
+        font-size: 16px;
         padding: 24px 0 0 0;
       }
 
