--- a/components/Сalculator/Calculator.module.scss
+++ b/components/Сalculator/Calculator.module.scss
@@ -1,5 +1,20 @@
 .mobile_description {
   display: none;
+  width: 100%;
+  text-align: center;
+  h4{
+    font-weight: 600;
+    font-size: 19px;
+    line-height: 24px;
+    letter-spacing: -0.02em;
+  }
+  p{
+    text-align: left;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 120%;
+    color: #78818C;
+  }
 }
 
 .calculator_container {
@@ -198,14 +213,27 @@
       .calculator {
         width: 100%;
         max-width: none;
+        p{
+          font-size: 16px;
+        }
       }
 
       .result {
         max-width: 100%;
 
+        .additional_info{
+          p{
+            font-size: 16px;
+          }
+          span{
+            font-size: 16px;
+          }
+        }
+
         h4 {
+          margin-top: 24px;
           text-align: center;
-          font-size: 24px;
+          font-size: 32px;
         }
       }
     }
